# slicer

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists2.txt  Dockerfile  LICENSE  README.md  quer.txt  query.txt  ya.conf
cmd/: CMakeLists.txt  main.cpp
example/: ya.make
generate_requests/: __main__.py  a.txt  b.txt  c.txt  d.txt
generate_requests/big_test/: __main__.py  d.txt
generate_requests/count_disbalances/: __main__.py
generate_requests/realoc_keys/: __main__.py  b.txt
internal/balancer/: CMakeLists.txt
internal/balancer/include/: node.hpp
internal/balancer/src/: balancer.cpp  balancer.hpp  balancer_common.hpp  balancer_impl.cpp  balancer_impl.hpp  node.cpp  replicator.cpp  replicator.hpp
src/server/: CMakeLists.txt  main.cpp
src/server/cmd/: CMakeLists.txt  cmd_server.cpp
src/server/http/: CMakeLists.txt  http.cpp  http.h
src/server/lib/: CMakeLists.txt  balancer.cpp  balancer.h  balancer_impl.cpp  balancer_impl.h  public.h
tests/: CMakeLists.txt  test_balancer_lib.cpp
